--- a/web-app/src/app/course/index/index.component.html
+++ b/web-app/src/app/course/index/index.component.html
@@ -1,7 +1,7 @@
-<div class="container-md main" style="margin-top: 120px;">
+<div class="container-md main">
   <div class="row">
     <div class="col-md-12">
-      <form class="form-inline d-flex justify-content-between" style="width: auto"
+      <form class="form-inline d-flex justify-content-between"
             (ngSubmit)="onSubmit(searchForm)" #searchForm="ngForm">
         <div class="form-group mb-2">
           <label class="mr-2">学校：</label>
@@ -38,12 +38,12 @@
         </div>
       </form>
     </div>
-    <div class="col-md-4 text-right" style="margin: -53px 0px 0px 1100px" >
+    <div class="col-md-4 text-right" style="margin: -153px 0px 0px 1100px" >
       <a class="btn btn-primary" (click)="openAddDialog()"><span class="oi oi-plus"></span>新增</a>
     </div>
   </div>
   <br>
-  <table class="table" style="width: 1550px">
+  <table class="table" style="width: 1450px">
     <thead>
     <tr>
       <th>序号</th>
