--- a/web-app/src/app/course/add/add.component.html
+++ b/web-app/src/app/course/add/add.component.html
@@ -1,133 +1,145 @@
-<div>
-  <h2>新增课程</h2>
+<div class="main">
+  <h1>新增课程</h1>
+  <hr>
+  <form class="container-sm content" [formGroup]="formGroup">
+    <div class="mb-3 row">
+      <label class="col-sm-2 col-form-label">学校名称</label>
+      <div class="col-sm-10">
+        <app-school-select (selected)="onSchoolChange($event)"></app-school-select>
+        <small class="text-danger"
+               *ngIf="course.school_id === null">
+          必须指定一个学校
+        </small>
+      </div>
+    </div>
+    <div class="mb-3 row" *ngIf="course.school_id !== null">
+      <label class="col-sm-2 col-form-label">班级名称</label>
+      <div class="col-sm-10">
+        <select class="form-control"  name="course.clazz_id" id="course.clazz_id" formControlName="klassId" (change)="onKlassChange(formGroup.get('klassId')!.value ?? 0)">
+          <option >所有班级</option>
+          <option *ngFor="let clazz of clazzes" [value]="clazz.id">
+            {{clazz.name}}
+          </option>
+        </select>
+        <small class="text-danger"
+               *ngIf="course.clazz_id === null">
+          必须指定一个班级
+        </small>
+      </div>
+    </div>
+    <div class="mb-3 row" *ngIf="course.school_id !== null">
+      <label class="col-sm-2 col-form-label">学期</label>
+      <div class="col-sm-10">
+        <select class="form-control"  (change)="onTermChange(formGroup.get('termId')!.value ?? 0)" name="course.term_id" id="course.term_id" formControlName="termId">
+          <option *ngFor="let term of terms" [value]="term.id">
+            {{term.name}}
+          </option>
+        </select>
+        <small class="text-danger"
+               *ngIf="course.term_id === null">
+          必须指定一个学期
+        </small>
+      </div>
+    </div>
+    <div class="mb-3 row">
+      <label for="name" class="col-sm-2 col-form-label">课程名称</label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control"  name="name" id="name" formControlName="name">
+        <small class="text-danger"
+               *ngIf="!formGroup.get('name')!.value ?? ''">
+          课程名称不能为空
+        </small>
+      </div>
+    </div>
+    <div class="mb-3 row">
+      <label class="col-sm-2 col-form-label">类别：</label>
+      <div class="col-sm-10" >
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" id="sory-bi"
+                 name="sory"
+                 [value]="1"
+                 formControlName="sory">
+          <label class="form-check-label" for="sory-bi">必修</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" id="sory-option"
+                 name="sory"
+                 [value]="0"
+                 formControlName="sory">
+          <label class="form-check-label" for="sory-option">选修</label>
+        </div>
+      </div>
+    </div>
+    <div class="mb-3 row" *ngIf="!formGroup.get('sory')!.value ?? 0">
+      <label class="col-sm-2 col-form-label">用户</label>
+      <div class="col-sm-10">
+        <select class="form-control" name="course.user_id" id="course.user_id" formControlName="userId">
+          <option >请选择用户</option>
+          <option *ngFor="let user of users" [value]="user.id">
+            {{user.name}}
+          </option>
+        </select>
+        <small class="text-danger"
+               *ngIf="!formGroup.get('userId')!.value ?? 0">
+          必须指定一个用户
+        </small>
+      </div>
+    </div>
+    <div class="mb-3 row">
+      <label for="name" class="col-sm-2 col-form-label">选择周数</label>
+      <div class="col-sm-10">
+        <mat-form-field>
+          <mat-select [multiple]="true" #multiSelect="matSelect" formControlName="week">
+            <mat-option *ngFor="let week of weeks" [value]="week">
+              {{ week }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+      <small class="text-danger"
+             *ngIf="!formGroup.get('week')!.value ?? 0">
+        必须选择周数
+      </small>
+    </div>
+    <div class="mb-3 row">
+      <label for="name" class="col-sm-2 col-form-label">周几上课</label>
+      <div class="col-sm-10">
+        <select name="course.day" formControlName="day" class="custom-select mr-sm-2">
+          <option *ngFor="let day of days" [value]="day.value">{{ day.value }}</option>
+        </select>
+        <small class="text-danger"
+               *ngIf="!formGroup.get('day')!.value ?? 0">
+          必须选择周几上课
+        </small>
+      </div>
+    </div>
+    <div class="mb-3 row">
+      <label for="name" class="col-sm-2 col-form-label">上课节数</label>
+      <div class="col-sm-10">
+        <select class="custom-select mr-sm-2" id="section" name="section" formControlName="period">
+          <option selected disabled value="">请选择课程节次</option>
+          <option [value]="1">第一大节</option>
+          <option [value]="2">第二大节</option>
+          <option [value]="3">第三大节</option>
+          <option [value]="4">第四大节</option>
+          <option [value]="5">第五大节</option>
+        </select>
+        <small class="text-danger"
+               *ngIf="!formGroup.get('period')!.value ?? 0">
+          必须选择课程节次
+        </small>
+      </div>
+    </div>
+    <div class="mb-3 row" style="margin: 20px 0px 0px 0px">
+      <div class="col-sm-3 offset-sm-1" style="margin: 0px 0px 0px 200px">
+        <button appLoading class="btn btn-primary" (click)="onSubmit()"
+                [disabled]="formGroup.invalid ||
+(formGroup.get('sory')!.value === 0 && formGroup.get('userId')!.value === 0)"><i class="fa fa-save"></i>保存
+        </button>
+      </div>
+      <div class="col-sm-3 offset-sm-1">
+        <button mat-button class="btn btn-secondary" (click)="onNoClick()">取消</button>
+      </div>
+    </div>
+  </form>
 </div>
-<hr>
-<form class="container-sm" style="margin: 40px 0px 0px 0px" [formGroup]="formGroup">
-  <div class="mb-3 row">
-    <label class="col-sm-2 col-form-label">学校名称</label>
-    <div class="col-sm-10">
-      <app-school-select (selected)="onSchoolChange($event)"></app-school-select>
-      <small class="text-danger"
-             *ngIf="course.school_id === null">
-        必须指定一个学校
-      </small>
-    </div>
-  </div>
-  <div class="mb-3 row" *ngIf="course.school_id !== null">
-    <label class="col-sm-2 col-form-label">班级名称</label>
-    <div class="col-sm-10">
-      <select class="form-control"  name="course.clazz_id" id="course.clazz_id" formControlName="klassId" (change)="onKlassChange(formGroup.get('klassId')!.value ?? 0)">
-        <option >所有班级</option>
-        <option *ngFor="let clazz of clazzes" [value]="clazz.id">
-          {{clazz.name}}
-        </option>
-      </select>
-      <small class="text-danger"
-             *ngIf="course.clazz_id === null">
-        必须指定一个班级
-      </small>
-    </div>
-  </div>
-  <div class="mb-3 row" *ngIf="course.school_id !== null">
-    <label class="col-sm-2 col-form-label">学期</label>
-    <div class="col-sm-10">
-      <select class="form-control"  (change)="onTermChange(formGroup.get('termId')!.value ?? 0)" name="course.term_id" id="course.term_id" formControlName="termId">
-        <option *ngFor="let term of terms" [value]="term.id">
-          {{term.name}}
-        </option>
-      </select>
-      <small class="text-danger"
-             *ngIf="course.term_id === null">
-        必须指定一个学期
-      </small>
-    </div>
-  </div>
-  <div class="mb-3 row">
-    <label for="name" class="col-sm-2 col-form-label">课程名称</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control"  name="name" id="name" formControlName="name">
-      <small class="text-danger"
-             *ngIf="course.name === ''">
-        课程名称不能为空
-      </small>
-    </div>
-  </div>
-  <div class="mb-3 row">
-    <label class="col-sm-2 col-form-label">类别：</label>
-    <div class="col-sm-10" >
-      <div class="form-check form-check-inline">
-        <input class="form-check-input" type="radio" id="sory-bi"
-               name="sory"
-               [value]="1" 
-               formControlName="sory">
-        <label class="form-check-label" for="sory-bi">必修</label>
-      </div>
-      <div class="form-check form-check-inline">
-        <input class="form-check-input" type="radio" id="sory-option"
-               name="sory"
-               [value]="0"
-               formControlName="sory">
-        <label class="form-check-label" for="sory-option">选修</label>
-      </div>
-    </div>
-  </div>
-  <div class="mb-3 row">
-    <label class="col-sm-2 col-form-label">用户</label>
-    <div class="col-sm-10">
-      <select class="form-control" name="course.user_id" id="course.user_id" formControlName="userId">
-        <option >请选择用户</option>
-        <option *ngFor="let user of users" [value]="user.id">
-          {{user.name}}
-        </option>
-      </select>
-      <small class="text-danger"
-             *ngIf="course.user_id === null">
-        必须指定一个用户
-      </small>
-    </div>
-  </div>
-  <div class="mb-3 row">
-    <label for="name" class="col-sm-2 col-form-label">选择周数</label>
-    <div class="col-sm-10">
-      <mat-form-field>
-        <mat-select [multiple]="true" #multiSelect="matSelect" formControlName="week">
-          <mat-option *ngFor="let week of weeks" [value]="week">
-            {{ week }}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-      </div>
-  </div>
-  <div class="mb-3 row">
-    <label for="name" class="col-sm-2 col-form-label">周几上课</label>
-    <div class="col-sm-10">
-    <select name="course.day" formControlName="day" class="custom-select mr-sm-2">
-        <option *ngFor="let day of days" [value]="day.value">{{ day.value }}</option>
-      </select>
-    </div>
-  </div>
-  <div class="mb-3 row">
-    <label for="name" class="col-sm-2 col-form-label">上课节数</label>
-    <div class="col-sm-10">
-      <select class="custom-select mr-sm-2" id="section" name="section" formControlName="period">
-        <option selected disabled value="">请选择课程节次</option>
-        <option [value]="1">第一大节</option>
-        <option [value]="2">第二大节</option>
-        <option [value]="3">第三大节</option>
-        <option [value]="4">第四大节</option>
-        <option [value]="5">第五大节</option>
-    </select>
-    </div>
-  </div>
-  <div class="mb-3 row" style="margin: 20px 0px 0px 0px">
-    <div class="col-sm-3 offset-sm-1" style="margin: 0px 0px 0px 200px">
-      <button appLoading class="btn btn-primary" (click)="onSubmit()"
-              [disabled]="formGroup.invalid"><i class="fa fa-save"></i>保存
-      </button>
-    </div>
-    <div class="col-sm-3 offset-sm-1">
-      <button mat-button class="btn btn-secondary" (click)="onNoClick()">取消</button>
-    </div>
-  </div>
-</form>
-
