--- a/web-app/src/app/course/index/index.component.sass
+++ b/web-app/src/app/course/index/index.component.sass
@@ -1,3 +1,5 @@
+form
+  margin-top: 90px
 
 .btn
   margin-right: 0.5em
@@ -6,6 +8,10 @@
 .btn > svg
   margin-right: 0.3em
 
+.main
+  margin: 100px 0px 0px -80px
+  font-size: 20px
+  width: 2000px
 
 .btn-inline
   display: inline-block
@@ -15,4 +21,14 @@
 .btn-inline:last-child
   margin-right: 0
 
+a.btn-primary
+  color: white
+  margin-top: 90px
+
+.search
+  margin-left: 7px
+
+.table
+  margin-top: 20px
+  width: 1400px
 
