--- a/web-app/src/app/course-schedule/course-schedule.component.html
+++ b/web-app/src/app/course-schedule/course-schedule.component.html
@@ -31,7 +31,7 @@
       </div>
       <div class="form-group mb-2">
         <label class="mr-2">周数：</label>
-        <select class="form-control" [(ngModel)]="searchParameters.week" (ngModelChange)="getWeekDates(searchParameters.week)" name="week" id="week">
+        <select class="form-control" [(ngModel)]="searchParameters.week" name="week" id="week">
           <option [ngValue]=0>所有周数</option>
           <option *ngFor="let week of weeks" [value]="week">
             {{week}}
