--- a/web-app/src/app/schedule/schedule.component.html
+++ b/web-app/src/app/schedule/schedule.component.html
@@ -1,6 +1,20 @@
 <div class="container-md main" style="margin-top: 120px;">
+    <div>
+        <ng-container *ngFor="let currentWeekOfSchool of currentWeekOfSchools">
+            <ng-container *ngIf="currentWeekOfSchool.termName !== '暂无学期安排'">
+                <p style=" font-size: 16px;">
+                    {{'当前日期为' + currentWeekOfSchool.schoolName + currentWeekOfSchool.termName + '第' + currentWeekOfSchool.currentWeek + '周' }}<br>
+                </p>
+            </ng-container>
+            <ng-container *ngIf="currentWeekOfSchool.termName === '暂无学期安排'">
+                <p style=" font-size: 16px;">
+                    {{'当前日期' + currentWeekOfSchool.schoolName + currentWeekOfSchool.termName }}<br>
+                </p>
+            </ng-container>
+        </ng-container>
+    </div>
     <div class="mt-4 mb-4">
-        <form class="form-inline" (ngSubmit)="onSubmit()" [formGroup]="formGroup">
+        <form class="form-inline" style="margin-top: 24px;"(ngSubmit)="onSubmit()" [formGroup]="formGroup">
             <!-- 查询日期 -->
             <input class="form-control datetimepicker-input" type="date" name="date" id="date" formControlName="date"/>
             <!-- 提交按钮 -->
@@ -22,11 +36,11 @@
             <tr *ngFor="let section of sectionNumber">
             <td >
                 <ng-container [ngSwitch]="section">
-                <p *ngSwitchCase="1">8:30 - 10:05</p>
-                <p *ngSwitchCase="2">10:30 - 12:00</p>
-                <p *ngSwitchCase="3">14:00 - 15:30</p>
-                <p *ngSwitchCase="4">16:30 - 18:00</p>
-                <p *ngSwitchCase="5">20:00 - 21:00</p>
+                <p *ngSwitchCase="1">第一大节<br>(8:30 - 10:05)</p>
+                <p *ngSwitchCase="2">第二大节<br>(10:30 - 12:00)</p>
+                <p *ngSwitchCase="3">第三大节<br>(14:00 - 15:30)</p>
+                <p *ngSwitchCase="4">第四大节<br>(16:30 - 18:00)</p>
+                <p *ngSwitchCase="5">第五大节<br>(20:00 - 21:00)</p>
                 </ng-container>
             </td>
             <ng-container *ngFor="let date of dateNumber">
