--- a/web-app/src/app/course-schedule/course-schedule.component.html
+++ b/web-app/src/app/course-schedule/course-schedule.component.html
@@ -20,16 +20,6 @@
           </option>
         </select>
       </div>
-      {{ searchParameters.userId }}
-      <div class="form-group mb-2">
-        <label class="mr-2">用户：</label>
-        <select class="form-control" [(ngModel)]="searchParameters.userId" name="user_id" id="user_id">
-          <option [ngValue]="0">所有用户</option>
-          <option *ngFor="let user of users" [value]="user.id">
-            {{user.name}}
-          </option>
-        </select>
-      </div>
       <div class="form-group mb-2">
         <label class="mr-2">学期：</label>
         <select class="form-control" [(ngModel)]="searchParameters.termId" (change)="onTermChange(searchParameters.termId)" name="term_id" id="term_id">
@@ -49,6 +39,15 @@
         </select>
       </div>
       <div class="form-group mb-2">
+        <label class="mr-2">用户：</label>
+        <select class="form-control" [(ngModel)]="searchParameters.userId" name="user_id" id="user_id">
+          <option [ngValue]="0">所有用户</option>
+          <option *ngFor="let user of users" [value]="user.id">
+            {{user.name}}
+          </option>
+        </select>
+      </div>
+      <div class="form-group mb-2">
         <button class="btn btn-success mb-2" type="submit"
                 [disabled]="searchParameters.schoolId === 0 ||
                 searchParameters.klassId === 0 ||
@@ -62,7 +61,7 @@
       <table style="width: 1500px;margin-left: -200px">
         <thead>
         <tr>
-          <th>节次/星期</th>
+          <th>时间</th>
           <th *ngFor="let day of days; let i = index" class="multi-line-th">
             {{ day.name }} <br> {{ dates[i] }}
           </th>
@@ -70,7 +69,8 @@
         </thead>
         <tbody>
         <tr *ngFor="let period of periods">
-          <td>{{ period.name }}</td>
+          <td>{{ period.name }} 
+            <br>({{ period.startTime }} - {{ period.endTime }})<br><br></td>
           <td *ngFor="let day of days">
             {{ courseTable[day.value - 1][period.value - 1] || '-' }}
           </td>
