--- a/web-app/src/app/schedule/schedule.component.html
+++ b/web-app/src/app/schedule/schedule.component.html
@@ -59,4 +59,41 @@
             </tr>
         </tbody>
     </table>
+
+
+
+
+
+    <h2 class="mb-4">Bootstrap 4 响应式表格示例</h2>
+    <table class="table table-striped table-bordered table-hover">
+        <thead class="thead-dark">
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">姓名</th>
+                <th scope="col">年龄</th>
+                <th scope="col">城市</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th scope="row">1</th>
+                <td>张三</td>
+                <td>28</td>
+                <td>北京</td>
+            </tr>
+            <tr>
+                <th scope="row">2</th>
+                <td>李四</td>
+                <td>34</td>
+                <td>上海</td>
+            </tr>
+            <tr>
+                <th scope="row">3</th>
+                <td>王五</td>
+                <td>45</td>
+                <td>广州</td>
+            </tr>
+            <!-- 你可以继续添加更多的行 -->
+        </tbody>
+    </table>
 </div>
