--- a/web-app/src/app/nav/nav.component.sass
+++ b/web-app/src/app/nav/nav.component.sass
@@ -1,5 +1,5 @@
 // 定义变量
-$primary-color: #990099
+$primary-color: #ADD8E6
 $secondary-color: #F5F5F5
 $hover-color: #E0E0E0
 $font-stack: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
