--- a/web-app/src/app/term/index/index.component.html
+++ b/web-app/src/app/term/index/index.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-8">
       <form (ngSubmit)="onQuery()" class="form-inline">
-        <div class="form-group school">
+        <div class="form-group school" style="width: 260px;">
           <label for="params.school_id">学校名称：</label>
           <!-- 默认提示选项 -->
           <select class="form-control mr-2" name="params.school_id" id="params.school_id" [(ngModel)]="params.school_id">
