--- a/web-app/src/app/schedule/schedule.component.html
+++ b/web-app/src/app/schedule/schedule.component.html
@@ -14,18 +14,18 @@
         </ng-container>
     </div>
     <div class="mt-4 mb-4">
-        <form class="form-inline" style="margin-top: 24px;width: 1900px;"(ngSubmit)="onSubmit()" [formGroup]="formGroup" >
+        <form class="form-inline" style="margin-top: 24px;width: 1000px;"(ngSubmit)="onSubmit()" [formGroup]="formGroup" >
             <!-- 查询日期 -->
             <input class="form-control datetimepicker-input" type="date" name="date" id="date" formControlName="date"/>
             <!-- 提交按钮 -->
             <div class="form-group col-md-2">
                 <button type="submit" class="btn btn-outline-success" [disabled]="formGroup.invalid">&nbsp;<i class="fas fa-search"></i>查询</button>
             </div>
-            <div class="form-group col-md-4"></div>
-            <div class="col-md-4" style="margin-top: 10px;">
-                <a type="submit" class="btn btn-primary" (click)="openAddDialog()">&nbsp;<span class="oi oi-plus"></span>添加钉钉机器人发送每日行程!</a>
-            </div>
         </form>
+ 
+    </div>
+    <div class="col-md" style="margin-top: -149px;margin-left: 1106px;">
+        <a type="submit" class="btn btn-primary" (click)="openAddDialog()">&nbsp;<span class="oi oi-plus"></span>添加钉钉机器人发送每日行程!</a>
     </div>
     <table class="table">
         <thead>
@@ -57,43 +57,6 @@
                 </td>
             </ng-container>
             </tr>
-        </tbody>
-    </table>
-
-
-
-
-
-    <h2 class="mb-4">Bootstrap 4 响应式表格示例</h2>
-    <table class="table table-striped table-bordered table-hover">
-        <thead class="thead-dark">
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">姓名</th>
-                <th scope="col">年龄</th>
-                <th scope="col">城市</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <th scope="row">1</th>
-                <td>张三</td>
-                <td>28</td>
-                <td>北京</td>
-            </tr>
-            <tr>
-                <th scope="row">2</th>
-                <td>李四</td>
-                <td>34</td>
-                <td>上海</td>
-            </tr>
-            <tr>
-                <th scope="row">3</th>
-                <td>王五</td>
-                <td>45</td>
-                <td>广州</td>
-            </tr>
-            <!-- 你可以继续添加更多的行 -->
         </tbody>
     </table>
 </div>
