--- a/web-app/src/app/my-course/index/index.component.html
+++ b/web-app/src/app/my-course/index/index.component.html
@@ -33,10 +33,10 @@
       </form>
     </div>
     <div class="col-md-4">
-      <a class="btn btn-primary mb-2" (click)="openCreateDialog()"><span class="oi oi-plus"></span>创建我的选修课程</a>
+      <a class="btn btn-primary mb-2" (click)="openCreateDialog()"><span class="oi oi-plus"></span>创建我的课程</a>
     </div>
     <div class="col-md-4" style="margin-left: 950px;margin-top: -145px">
-      <a class="btn btn-primary mb-2" (click)="openAddDialog()"><span class="oi oi-plus"></span>添加我的选修课程</a>
+      <a class="btn btn-primary mb-2" (click)="openAddDialog()"><span class="oi oi-plus"></span>添加我的课程</a>
     </div>
   </div>
 
@@ -64,7 +64,7 @@
       <td>{{course.day}}</td>
       <td>{{course.period}}</td>
       <td>
-        <button (click)="onDelete(course)" class="btn btn-sm btn-danger" *ngIf="course.sory === 0"><span class="oi oi-trash"></span>删除</button>
+        <button (click)="onDelete(course)" class="btn btn-sm btn-danger"><span class="oi oi-trash"></span>删除</button>
       </td>
     </tr>
     </tbody>
