--- a/web-app/src/app/course/index/index.component.html
+++ b/web-app/src/app/course/index/index.component.html
@@ -5,7 +5,7 @@
             (ngSubmit)="onSubmit(searchForm)" #searchForm="ngForm">
         <div class="form-group mb-2">
           <label class="mr-2">学校：</label>
-          <app-school-select (selected)="onSchoolChange($event)" ></app-school-select>
+          <app-school-select ></app-school-select>
           <!-- 默认提示选项 -->
         </div>
         <div class="form-group mb-2">
