--- a/web-app/src/app/course-schedule/course-schedule.component.html
+++ b/web-app/src/app/course-schedule/course-schedule.component.html
@@ -1,6 +1,6 @@
 <div class="container-md main">
   <div class="col-md-8">
-    <form class="form-inline d-flex justify-content-between" style="width: 1050px"
+    <form class="form-inline d-flex justify-content-between" style="width: 1200px;margin-bottom: 20px;margin-left: -52px;"
           (ngSubmit)="onSearchSubmit()">
       <div class="form-group mb-2">
         <label class="mr-2">学校：</label>
