--- a/web-app/src/app/nav/nav.component.html
+++ b/web-app/src/app/nav/nav.component.html
@@ -2,8 +2,8 @@
   <div class="top-bar">
     <div class="title">课表查询系统</div>
     <form class="form-inline logout" (ngSubmit)="onLogout()">
-      <div class="navbar-brand">欢迎 {{me?.name}}</div>
-      <button class="btn btn-outline-light my-2 my-sm-0" type="submit">退出登录</button>
+      <div class="navbar-brand" style="color: #5c5252;">欢迎 {{me?.name}}</div>
+      <button class="btn btn-outline-light my-2 my-sm-0" type="submit" style="color: #5c5252;border-color: #d51919;">退出登录</button>
     </form>
   </div>
 
