--- a/web-app/src/app/nav/nav.component.sass
+++ b/web-app/src/app/nav/nav.component.sass
@@ -102,3 +102,10 @@ body, html
   font-size: 20px
   text-decoration: none
 
+.nav-item:hover 
+
+    background-color: #f0f0f0 /* 悬停时改变背景颜色 */
+
+    border-radius: 5px /* 可选：添加圆角以增加视觉效果 */
+
+
