--- a/web-app/src/app/course-schedule/course-schedule.component.html
+++ b/web-app/src/app/course-schedule/course-schedule.component.html
@@ -38,6 +38,7 @@
           </option>
         </select>
       </div>
+      {{searchParameters.userId}}
       <div class="form-group mb-2">
         <label class="mr-2">用户：</label>
         <select class="form-control" [(ngModel)]="searchParameters.userId" name="user_id" id="user_id">
