--- a/web-app/src/app/course-schedule/course-schedule.component.html
+++ b/web-app/src/app/course-schedule/course-schedule.component.html
@@ -60,13 +60,13 @@
     <div class="container" style="margin-left: 0px;">
         <div class="row mb-2" style="width: 2079px;">
             <div class="col-lg-1"></div>
-            <div class="col-lg-1 time-col">星期一</div>
-            <div class="col-lg-1 time-col">星期二</div>
-            <div class="col-lg-1 time-col">星期三</div>
-            <div class="col-lg-1 time-col">星期四</div>
-            <div class="col-lg-1 time-col">星期五</div>
-            <div class="col-lg-1 time-col">星期六</div>
-            <div class="col-lg-1 time-col">星期日</div>
+            <div class="col-lg-1 time-col">星期一{{dates[0]}}</div>
+            <div class="col-lg-1 time-col">星期二{{dates[1]}}</div>
+            <div class="col-lg-1 time-col">星期三{{dates[2]}}</div>
+            <div class="col-lg-1 time-col">星期四{{dates[3]}}</div>
+            <div class="col-lg-1 time-col">星期五{{dates[4]}}</div>
+            <div class="col-lg-1 time-col">星期六{{dates[5]}}</div>
+            <div class="col-lg-1 time-col">星期日{{dates[6]}}</div>
         </div>
         <ng-container *ngFor="let section of periods">
             <div class="row mb-3" style="width: 2079px;margin-left: -33px;">
