添加钉钉机器人时会先发送今天行程

--- a/web-app/src/app/course/index/index.component.html
+++ b/web-app/src/app/course/index/index.component.html
@@ -43,7 +43,7 @@
     </div>
   </div>
   <br>
-  <table class="table" style="width: 1450px">
+  <table class="table" style="width: 1574px;margin-left: -82px;">
     <thead>
     <tr>
       <th>序号</th>
