--- a/web-app/src/app/nav/nav.component.html
+++ b/web-app/src/app/nav/nav.component.html
@@ -2,7 +2,7 @@
   <div class="top-bar">
     <div class="title">课表查询系统</div>
     <div style=" position: fixed;right: 0;margin-top: 104px;">
-      <div class="navbar-brand" style="color: #5c5252;">欢迎! {{me?.name}}</div>
+      <div class="navbar-brand" style="color: #5c5252;">欢迎 {{me?.name}}!</div>
       <div class="image-container" style="width: 25px; margin-left: 59px;" (click)="toggleList()">
         <span class="oi oi-menu"  style="color: black;"></span>
       </div>
