--- a/web-app/src/app/schedule/schedule.component.html
+++ b/web-app/src/app/schedule/schedule.component.html
@@ -31,13 +31,13 @@
         <div class="container" style="margin-left: 0px;">
             <div class="row mb-2" style="width: 2079px;">
                 <div class="col-lg-1"></div>
-                <div class="col-lg-1 time-col">星期一{{weekDates[0]}}</div>
-                <div class="col-lg-1 time-col">星期二{{weekDates[1]}}</div>
-                <div class="col-lg-1 time-col">星期三{{weekDates[2]}}</div>
-                <div class="col-lg-1 time-col">星期四{{weekDates[3]}}</div>
-                <div class="col-lg-1 time-col">星期五{{weekDates[4]}}</div>
-                <div class="col-lg-1 time-col">星期六{{weekDates[5]}}</div>
-                <div class="col-lg-1 time-col">星期日{{weekDates[6]}}</div>
+                <div class="col-lg-1 time-col">星期一<br>{{weekDates[0]}}</div>
+                <div class="col-lg-1 time-col">星期二<br>{{weekDates[1]}}</div>
+                <div class="col-lg-1 time-col">星期三<br>{{weekDates[2]}}</div>
+                <div class="col-lg-1 time-col">星期四<br>{{weekDates[3]}}</div>
+                <div class="col-lg-1 time-col">星期五<br>{{weekDates[4]}}</div>
+                <div class="col-lg-1 time-col">星期六<br>{{weekDates[5]}}</div>
+                <div class="col-lg-1 time-col">星期日<br>{{weekDates[6]}}</div>
             </div>
             <ng-container *ngFor="let section of sectionNumber">
                 <div class="row mb-3" style="width: 2079px;margin-left: -33px;">
